--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.2.24</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
