create the user API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.devtools.restart.enabled=true
 
 # Enable or disable LiveReload
 spring.devtools.livereload.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
