Completed the User's Api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ server.port = 8080
 
 # Enable or disable DevTools restart feature
 spring.devtools.restart.enabled=true
+jwt.secret =${JWT_SECRET}
 
 # Enable or disable LiveReload
 spring.devtools.livereload.enabled=true
