Change the response message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ server.port = 8080
 spring.devtools.restart.enabled=true
 jwt.secret =${JWT_SECRET}
 
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+
 # Enable or disable LiveReload
 spring.devtools.livereload.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
