--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 server.port = 8080
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
+spring.datasource.url=jdbc:mysql://164.52.216.41/meganathan_subramanian_corejava_project
+spring.datasource.username=ZtIxUqrQ3Tcd
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Enable or disable DevTools restart feature
-spring.devtools.restart.enabled=true
-jwt.secret=${JWT_SECRET}
-
-# Enable or disable LiveReload
-spring.devtools.livereload.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
