--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,15 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
