--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=ZtIxUqrQ3Tcd
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+firebase.config.path=etc/secrets/serviceAccountKey.json
+#user.default.password=${DEFAULT_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
